--- a/CSS/restaurant.css
+++ b/CSS/restaurant.css
@@ -1,7 +1,11 @@
+html, body {
+  overflow-x: hidden;
+}
 body {
   font-size: 1.6rem;
   font-family: "Roboto", sans-serif;
   margin: 0 0;
+  position: relative;
 }
 a {
   text-decoration: inherit;
